<resources>
    <string name="full_stop">。</string>
    <string name="cht_full_stop">。</string>
    <string name="en_full_stop">.</string>
    <string name="comma">，</string>
    <string name="cht_comma">，</string>
    <string name="en_comma">,</string>
    <string name="semicolon">；</string>
    <string name="cht_semicolon">；</string>
    <string name="en_semicolon">;</string>
    <string name="exclamatory_point">！</string>
    <string name="cht_exclamatory_point">！</string>
    <string name="en_exclamatory_point">!</string>
    <string name="question_mark">？</string>
    <string name="cht_question_mark">？</string>
    <string name="en_question_mark">\?</string>
    <string name="colon">：</string>
    <string name="cht_colon">：</string>
    <string name="en_colon">:</string>
    <string name="ellipsis">……</string>
    <string name="cht_ellipsis">……</string>
    <string name="en_ellipsis">&#8230;</string>
    <string name="less_than">&lt;</string>
    <string name="cht_less_than">&lt;</string>
    <string name="en_less_than">&lt;</string>
    <string name="prev_arrow">&#160;&lt;&#160;</string>
    <string name="cht_prev_arrow">&#160;&lt;&#160;</string>
    <string name="en_prev_arrow">&#160;&lt;&#160;</string>
    <string name="greater_than">&gt;</string>
    <string name="cht_greater_than">&gt;</string>
    <string name="en_greater_than">&gt;</string>
    <string name="next_arrow">&#160;&gt;&#160;</string>
    <string name="cht_next_arrow">&#160;&gt;&#160;</string>
    <string name="en_next_arrow">&#160;&gt;&#160;</string>
    <string name="hello_world">世界你好！</string>
    <string name="cht_hello_world">@string/hello_world</string>
    <string name="en_hello_world">Hello world!</string>
    <string name="empty_string"></string>
    <string name="space">&#160;</string>
    <string name="settings">设置</string>
    <string name="cht_settings">設置</string>
    <string name="en_settings">Settings</string>
    <string name="help">帮助</string>
    <string name="cht_help">幫助</string>
    <string name="en_help">Help</string>
    <string name="terms_of_note">注意事项</string>
    <string name="cht_terms_of_note">注意事項</string>
    <string name="en_terms_of_note">Terms of Note</string>
    <string name="about">关于</string>
    <string name="cht_about">關於</string>
    <string name="en_about">About</string>
    <string name="about_this_app">关于本软件</string>
    <string name="cht_about_this_app">關於本軟體</string>
    <string name="en_about_this_app">About This APP</string>
    <string name="copyright">版权</string>
    <string name="cht_copyright">版權</string>
    <string name="en_copyright">Copyright</string>
    <string name="version">版本</string>
    <string name="cht_version">版本</string>
    <string name="en_version">Version</string>
    <string name="version_log">版本日志</string>
    <string name="cht_version_log">版本日志</string>
    <string name="en_version_log">Version Log</string>
    <string name="exit">退出</string>
    <string name="cht_exit">退出</string>
    <string name="en_exit">Exit</string>
    <string name="name">名称</string>
    <string name="cht_name">名稱</string>
    <string name="en_name">Name</string>
    <string name="alias">别名</string>
    <string name="cht_alias">別名</string>
    <string name="en_alias">Alias</string>
    <string name="app_name_key">软件名称</string>
    <string name="cht_app_name_key">軟體名稱</string>
    <string name="en_app_name_key">APP Name</string>
    <string name="author">作者</string>
    <string name="cht_author">作者</string>
    <string name="en_author">Author</string>
    <string name="app_version">软件版本</string>
    <string name="cht_app_version">軟體版本</string>
    <string name="en_app_version">APP Version</string>
    <string name="usage">用途</string>
    <string name="cht_usage">用途</string>
    <string name="en_usage">Usage</string>
    <string name="remarks">备注</string>
    <string name="cht_remarks">備注</string>
    <string name="en_remarks">Remarks</string>
    <string name="refer_to_remarks">见备注</string>
    <string name="cht_refer_to_remarks">見備注</string>
    <string name="en_refer_to_remarks">Refer to Remarks</string>
    <string name="save">保存</string>
    <string name="cht_save">保存</string>
    <string name="en_save">Save</string>
    <string name="save_successfully">保存成功</string>
    <string name="cht_save_successfully">保存成功</string>
    <string name="en_save_successfully">Saved Successfully</string>
    <string name="save_failed">保存失败</string>
    <string name="cht_save_failed">保存失敗</string>
    <string name="en_save_failed">Saved Unsuccessfully</string>
    <string name="refresh">刷新</string>
    <string name="cht_refresh">刷新</string>
    <string name="en_refresh">Refresh</string>
    <string name="please">请</string>
    <string name="cht_please">請</string>
    <string name="en_please">Please</string>
    <string name="please_wait">请稍候</string>
    <string name="cht_please_wait">請稍候</string>
    <string name="en_please_wait">Please Wait</string>
    <string name="yes">是</string>
    <string name="cht_yes">是</string>
    <string name="en_yes">Yes</string>
    <string name="no">否</string>
    <string name="cht_no">否</string>
    <string name="en_no">No</string>
    <string name="confirm">确定</string>
    <string name="cht_confirm">確定</string>
    <string name="en_confirm">Confirm</string>
    <string name="ok">好</string>
    <string name="cht_ok">好</string>
    <string name="en_ok">OK</string>
    <string name="cancal">取消</string>
    <string name="cht_cancal">取消</string>
    <string name="en_cancal">Cancel</string>
    <string name="agree">同意</string>
    <string name="cht_agree">同意</string>
    <string name="en_agree">Agree</string>
    <string name="not_agree">不同意</string>
    <string name="cht_not_agree">不同意</string>
    <string name="en_not_agree">Do Not Agree</string>
    <string name="confirm_selecttions">确认选择</string>
    <string name="cht_confirm_selecttions">確認選擇</string>
    <string name="en_confirm_selecttions">Confirm Selecttion(s)</string>
    <string name="cancel_selections">取消选择</string>
    <string name="cht_cancel_selections">取消選擇</string>
    <string name="en_cancel_selections">Cancel Selection(s)</string>
    <string name="redo">重做</string>
    <string name="cht_redo">重做</string>
    <string name="en_redo">Redo</string>
    <string name="undo">撤销</string>
    <string name="cht_undo">撤銷</string>
    <string name="en_undo">Undo</string>
    <string name="continue_to">继续</string>
    <string name="cht_continue_to">繼續</string>
    <string name="en_continue_to">Continue</string>
    <string name="abort">中止</string>
    <string name="cht_abort">中止</string>
    <string name="en_abort">Abort</string>
    <string name="stop">停止</string>
    <string name="cht_stop">停止</string>
    <string name="en_stop">Stop</string>
    <string name="query">查询</string>
    <string name="cht_query">查詢</string>
    <string name="en_query">Query</string>
    <string name="conditions_insufficient_or_wrong">条件不足或错误</string>
    <string name="cht_conditions_insufficient_or_wrong">條件不足或錯誤</string>
    <string name="en_conditions_insufficient_or_wrong">Conditions Insufficient or Wrong</string>
    <string name="querying">查询中……</string>
    <string name="cht_querying">查詢中……</string>
    <string name="en_querying">Querying\.\.\.</string>
    <string name="query_result">查询结果</string>
    <string name="cht_query_result">查詢結果</string>
    <string name="en_query_result">Query Result</string>
    <string name="search">查找</string>
    <string name="cht_search">查找</string>
    <string name="en_search">Search</string>
    <string name="searching">查找中……</string>
    <string name="cht_searching">查找中……</string>
    <string name="en_searching">Searching\.\.\.</string>
    <string name="search_manually">手动查找</string>
    <string name="cht_search_manually">手動查找</string>
    <string name="en_search_manually">Search Manually</string>
    <string name="search_result">查找结果</string>
    <string name="cht_search_result">查找結果</string>
    <string name="en_search_result">Query Result</string>
    <string name="not_found">找不到</string>
    <string name="cht_not_found">找不到</string>
    <string name="en_not_found">Not Found</string>
    <string name="can_not_find">找不到</string>
    <string name="cht_can_not_find">找不到</string>
    <string name="en_can_not_find">Can Not Find</string>
    <string name="none">无</string>
    <string name="cht_none">無</string>
    <string name="en_none">None</string>
    <string name="multi_records_found">找到多条记录</string>
    <string name="cht_multi_records_found">找到多條記錄</string>
    <string name="en_multi_records_found">Multiple Records Found</string>
    <string name="redirect">跳转/重定向</string>
    <string name="cht_redirect">跳轉/重定向</string>
    <string name="en_redirect">Redirect</string>
    <string name="redirecting">跳转/重定向中……</string>
    <string name="cht_redirecting">跳轉/重定向中……</string>
    <string name="en_redirecting">Redirecting\.\.\.</string>
    <string name="prev_one">前一个</string>
    <string name="cht_prev_one">前一個</string>
    <string name="en_prev_one">Previous</string>
    <string name="next_one">后一个</string>
    <string name="cht_next_one">後一個</string>
    <string name="en_next_one">Next</string>
    <string name="unknown">未知</string>
    <string name="cht_unknown">未知</string>
    <string name="en_unknown">Unknown</string>
    <string name="undefined">未定义</string>
    <string name="cht_undefined">未定義</string>
    <string name="en_undefined">Undefined</string>
    <string name="customized">自定义</string>
    <string name="cht_customized">自定義</string>
    <string name="en_customized">Customized</string>
    <string name="quantity">数目</string>
    <string name="cht_quantity">數目</string>
    <string name="en_quantity">Quantity</string>
    <string name="add">添加</string>
    <string name="cht_add">添加</string>
    <string name="en_add">Add</string>
    <string name="add_new">新增</string>
    <string name="cht_add_new">新增</string>
    <string name="en_add_new">New</string>
    <string name="delete">删除</string>
    <string name="cht_delete">刪除</string>
    <string name="en_delete">Delete</string>
    <string name="select">选择</string>
    <string name="cht_select">選擇</string>
    <string name="en_select">Select</string>
    <string name="please_select">请选择</string>
    <string name="cht_please_select">請選擇</string>
    <string name="en_please_select">Please Select</string>
    <string name="please_select_or_customize">请选择或自定义</string>
    <string name="cht_please_select_or_customize">請選擇或自定義</string>
    <string name="en_please_select_or_customize">Please Select or Customize</string>
    <string name="edit">编辑</string>
    <string name="cht_edit">編輯</string>
    <string name="en_edit">Edit</string>
    <string name="chs_import">导入</string>
    <string name="cht_import">導入</string>
    <string name="en_import">Import</string>
    <string name="input">输入</string>
    <string name="cht_input">輸入</string>
    <string name="en_input">Input</string>
    <string name="export">导出</string>
    <string name="cht_export">導出</string>
    <string name="en_export">Export</string>
    <string name="output">输出</string>
    <string name="cht_output">輸出</string>
    <string name="en_output">Output</string>
    <string name="sys_app">系统应用程序</string>
    <string name="cht_sys_app">系統應用程式</string>
    <string name="en_sys_app">System Application(s)</string>
    <string name="user_app">用户应用程序</string>
    <string name="cht_user_app">用戶應用程式</string>
    <string name="en_user_app">User Application(s)</string>
    <string name="function_not_implemented">功能待实现</string>
    <string name="cht_function_not_implemented">功能待實現</string>
    <string name="single_line_mode">单行模式</string>
    <string name="switch_to_single_line_mode">切换到单行模式</string>
    <string name="add_medicine">新增药物</string>
    <string name="category">种类</string>
    <string name="add_category">新增种类</string>
    <string name="hint_null_for_querying_all">不填则全查</string>
</resources>