<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.project.tcm_quick_search_notes.DetailContentActivity" >

    <item
        android:id="@+id/menu_mode_switch"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/switch_to_single_line_mode" />

    <item
        android:id="@+id/menu_edit"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:title="@string/edit"/>

    <item
        android:id="@+id/menu_save"
        android:orderInCategory="102"
        android:showAsAction="always"
        android:title="@string/save"
        android:visible="false" />

    <item
        android:id="@+id/menu_cancel"
        android:orderInCategory="103"
        android:showAsAction="always"
        android:title="@string/cancal"
        android:visible="false" />

    <item
        android:id="@+id/menu_details_help"
        android:orderInCategory="104"
        android:showAsAction="never"
        android:title="@string/help"/>

</menu>
