<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffb27e50" >

    <TextView
        android:id="@+id/txv_details_title"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true"
        android:textSize="22sp"
        android:textAppearance="@style/DefaultTextStyle" />

    <ImageView
        android:id="@+id/imgv_add_details_icon"
        android:contentDescription="@string/empty_string"
        android:layout_width="32dp"
        android:layout_height="32dp"
		android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/ic_add"
        android:layout_toEndOf="@+id/txv_details_title"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        android:clickable="false" />

    <ImageView
        android:id="@+id/imgv_delete_details_icon"
        android:contentDescription="@string/empty_string"
        android:layout_width="32dp"
        android:layout_height="32dp"
		android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/ic_delete"
        android:layout_toEndOf="@+id/imgv_add_details_icon"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        android:clickable="false" />

    <ImageView
        android:id="@+id/imgv_vertical_place_holder"
        android:contentDescription="@string/empty_string"
        android:layout_width="2dp"
        android:layout_height="56dp"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:clickable="false" />
		    
    <Button
        android:id="@+id/btn_confirm_details_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true"
        android:background="@drawable/default_button_style"
        android:text="@string/confirm"
        android:textColor="#ffcacaca"
        android:textSize="14sp"
        android:visibility="invisible"
        android:clickable="false" />
		    
    <Button
        android:id="@+id/btn_cancel_details_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_toStartOf="@+id/btn_confirm_details_change"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true"
        android:background="@drawable/default_button_style"
        android:text="@string/cancal"
        android:textColor="#ffcacaca"
        android:textSize="14sp"
        android:visibility="invisible"
        android:clickable="false" />

</RelativeLayout>
